trending brands section markup

--- a/index.html
+++ b/index.html
@@ -44,11 +44,74 @@
     />
 
     <!-- Custom css  -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
     <title>Eurasia</title>
   </head>
   <body>
+    <!-- **************************************************************** -->
+    <!-- Trending Brands Section  -->
+    <section id="trending-brands">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2 class="secondary-heading text-sm-center text-lg-start">
+              Browse Trending Brands 🔥
+            </h2>
+          </div>
+        </div>
+
+        <div class="row slider" id="slider">
+          <div class="col-sm col-xl-3 slide">
+            <img
+              src="assets/images/trending-brands/img1.png"
+              alt=""
+              class="img-responsive"
+            />
+            <div class="slide-text">
+              <span>Eco-Denta</span>
+              <h3>Colour Surprise</h3>
+            </div>
+          </div>
+          <div class="col-sm col-xl-3 slide">
+            <img
+              src="assets/images/trending-brands/img2.png"
+              alt=""
+              class="img-responsive"
+            />
+            <div class="slide-text">
+              <span>Paprika Chillis</span>
+              <h3>Chipsy Chilli</h3>
+            </div>
+          </div>
+          <div class="col-sm col-xl-3 slide last-positioned-child">
+            <img
+              src="assets/images/trending-brands/img3.png"
+              alt=""
+              class="img-responsive"
+            />
+            <div class="slide-text">
+              <span>Peace and Energy</span>
+              <h3>Tea India</h3>
+            </div>
+          </div>
+          <div class="col-sm col-xl-3 slide">
+            <img
+              src="assets/images/trending-brands/img2.png"
+              alt=""
+              class="img-responsive"
+            />
+            <div class="slide-text">
+              <span>Eco-Denta</span>
+              <h3>Colour Surprise</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- End of Trending Brands Section  -->
+    <!-- **************************************************************** -->
     <!-- Bootstrap scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
@@ -72,6 +135,6 @@
       type="text/javascript"
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
