browse all categories markup

--- a/index.html
+++ b/index.html
@@ -112,6 +112,286 @@
 
     <!-- End of Trending Brands Section  -->
     <!-- **************************************************************** -->
+
+    <!-- Browse All Categories section  -->
+
+    <section id="browse-all-categories">
+      <div class="container my-5">
+        <div class="row">
+          <h2 class="secondary-heading text-center my-5">
+            <span>😍</span> Browse All Categories
+          </h2>
+        </div>
+
+        <div class="row">
+          <!-- 1st row  -->
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/1.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Meat & Poultry</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/2.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Prawns & Shrimps</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/3.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Fish Products</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/4.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Fruits & Vegetables</p>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!-- End of 1st row  -->
+          <!-- 2nd row  -->
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/5.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Snacks & Fingerfoods</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/6.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Dairy products</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/7.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Drinks</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/8.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Bangladeshi Snacks & Mint</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <!-- End of 2nd row  -->
+          <!-- 3rd row  -->
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/9.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Rice, Flour & Pulses</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/10.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Papadoms, Noodles & Nuts</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/11.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Spices</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/12.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">
+                    Chutnies, Pickles & Relishes
+                  </p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <!-- End of 3rd row  -->
+          <!-- 4th row  -->
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/13.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Indian Snacks</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/14.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Oriental Foods</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/15.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">
+                    Butter, Ghee, Oil & Tinned
+                  </p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+            <a href="#">
+              <div class="card h-100">
+                <img
+                  src="assets/images/all-categories/16.png"
+                  alt="Card image cap"
+                  class="card-img-top img-fluid"
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">Packaging & Non Food</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <!-- End of 4th row  -->
+
+          <!-- View all categories button  -->
+          <div class="col-12 d-flex justify-content-center">
+            <button class="btn show-all-btn">
+              <div class="more">
+                View All Categories
+                <span
+                  ><img
+                    src="assets/images/all-categories/arrow-right.png"
+                    alt="arrow"
+                    class="right-arrow"
+                /></span>
+              </div>
+              <div class="less">
+                View Less Categories
+                <span
+                  ><img
+                    src="assets/images/all-categories/arrow-right.png"
+                    alt="arrow"
+                    class="left-arrow"
+                /></span>
+              </div>
+            </button>
+          </div>
+          <!-- End of View all categories button  -->
+        </div>
+      </div>
+    </section>
+    <!-- End of Browse All Categories section  -->
+    <!-- **************************************************************** -->
+
     <!-- Bootstrap scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
