browse all categories styles

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
     <!-- Browse All Categories section  -->
 
     <section id="browse-all-categories">
-      <div class="container my-5">
+      <div class="container">
         <div class="row">
-          <h2 class="secondary-heading text-center my-5">
+          <h2 class="secondary-heading text-center">
             <span>😍</span> Browse All Categories
           </h2>
         </div>
@@ -375,7 +375,7 @@
                 /></span>
               </div>
               <div class="less">
-                View Less Categories
+                View Less
                 <span
                   ><img
                     src="assets/images/all-categories/arrow-right.png"
@@ -389,6 +389,7 @@
         </div>
       </div>
     </section>
+
     <!-- End of Browse All Categories section  -->
     <!-- **************************************************************** -->
 
