about us section markup

--- a/index.html
+++ b/index.html
@@ -392,6 +392,144 @@
 
     <!-- End of Browse All Categories section  -->
     <!-- **************************************************************** -->
+    <!-- About us section  -->
+    <section id="about-us">
+      <div class="container my-5">
+        <div class="row">
+          <div class="col">
+            <h2 class="secondary-heading text-center text-md-start">
+              About Us 📝
+            </h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6 col-md-12 about-us-text-wrapper">
+            <div class="row">
+              <div class="col-lg-11 col-md-12 col">
+                <p class="about-us-text">
+                  Eurasia Group is a leading international manufacturer and
+                  distributor of frozen and fresh foods, serving the restaurant,
+                  catering and specialist supermarket sectors. Established in
+                  1991, the company began the journey by supplying the Indian
+                  restaurants and takeaways in Wales and the West Country.
+                  <span>
+                    With hard work and determination the business then developed
+                    rapidly, and the supply chain became national.
+                  </span>
+                </p>
+
+                <div
+                  class="logo-col text-center text-md-start mt-5 px-4 px-md-0"
+                >
+                  <img src="assets/images/about-us/logo/1.png" alt="" />
+                  <img src="assets/images/about-us/logo/2.png" alt="" />
+                  <img src="assets/images/about-us/logo/3.png" alt="" />
+                  <img src="assets/images/about-us/logo/4.png" alt="" />
+                  <img src="assets/images/about-us/logo/5.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="col-lg-6 col-md-12 col d-flex flex-wrap testimonial-wrapper"
+          >
+            <!-- card  -->
+            <div class="circle circle-yellow">
+              <div class="testimonial text-center">
+                <img
+                  src="assets/images/about-us/customers/1.png"
+                  alt="customer"
+                  class="reviewer-img"
+                />
+
+                <h3>Tanzim Chowdhury</h3>
+                <p>“Halal raw meat and fish as well at very good price.”</p>
+                <div class="rating">
+                  <img
+                    src="assets/images/about-us/customers/review-stars.png"
+                    alt=""
+                  />
+                  <p>5.0/5.0</p>
+                </div>
+              </div>
+            </div>
+            <!-- End of card  -->
+            <div class="circle circle-blue">
+              <div class="testimonial text-center">
+                <img
+                  src="assets/images/about-us/customers/2.png"
+                  alt="customer"
+                  class="reviewer-img"
+                />
+
+                <h3>Shahriar Khan</h3>
+                <p>
+                  "Nice place for shopping for Halal foods and asian spices"
+                </p>
+                <div class="rating">
+                  <img
+                    src="assets/images/about-us/customers/review-stars.png"
+                    alt=""
+                  />
+                  <p>5.0/5.0</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- card  -->
+            <div class="circle circle-red">
+              <div class="testimonial text-center">
+                <img
+                  src="assets/images/about-us/customers/3.png"
+                  alt="customer"
+                  class="reviewer-img"
+                />
+
+                <h3>Xawad Ahmed</h3>
+                <p>"Excellent customer service and very friendly staff."</p>
+                <div class="rating">
+                  <img
+                    src="assets/images/about-us/customers/review-stars.png"
+                    alt=""
+                  />
+                  <p>5.0/5.0</p>
+                </div>
+              </div>
+            </div>
+            <!-- End of card  -->
+            <!-- card  -->
+            <div class="circle circle-orange">
+              <div class="testimonial text-center">
+                <img
+                  src="assets/images/about-us/customers/4.png"
+                  alt="customer"
+                  class="reviewer-img"
+                />
+
+                <h3>Mahin Iqbal</h3>
+                <p>
+                  “Excellent customer service and very friendly staff. The store
+                  itself stocks many authentic ingredients.”
+                </p>
+                <div class="rating">
+                  <img
+                    src="assets/images/about-us/customers/review-stars.png"
+                    alt=""
+                  />
+                  <p>5.0/5.0</p>
+                </div>
+              </div>
+            </div>
+            <!-- End of card  -->
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- End of About us section  -->
+    <!-- **************************************************************** -->
 
     <!-- Bootstrap scripts -->
     <script
