gallery section done

--- a/index.html
+++ b/index.html
@@ -527,8 +527,72 @@
         </div>
       </div>
     </section>
-
     <!-- End of About us section  -->
+    <!-- **************************************************************** -->
+
+    <!-- **************************************************************** -->
+    <!-- Gallery section -->
+    <section id="trending-brands">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2 class="secondary-heading text-sm-center text-lg-start">
+              Gallery 📷
+            </h2>
+          </div>
+        </div>
+
+        <!-- Slider / Carousel  -->
+        <div class="row gallery-slider" id="slider">
+          <!-- Big slide  -->
+          <div class="col-xl-8 slide slick-slide-big">
+            <img
+              src="assets/images/gallery/img-big.png"
+              alt=""
+              class="img-responsive img-big"
+            />
+          </div>
+
+          <!-- Small slide  -->
+          <div class="col-xl-4 slide slick-slide-small">
+            <img
+              src="assets/images/gallery/img-small-1.png"
+              alt=""
+              class="img-responsive img-small"
+            />
+            <img
+              src="assets/images/gallery/img-small-2.png"
+              alt=""
+              class="img-responsive img-small"
+            />
+          </div>
+
+          <!-- Big slide  -->
+          <div class="col-xl-8 slide slick-slide-big">
+            <img
+              src="assets/images/gallery/img-big-3.jpg"
+              alt=""
+              class="img-responsive img-big"
+            />
+          </div>
+
+          <!-- Small slide  -->
+          <div class="col-xl-4 slide slick-slide-small">
+            <img
+              src="assets/images/gallery/img-small-4.jpg"
+              alt=""
+              class="img-responsive img-small"
+            />
+            <img
+              src="assets/images/gallery/img-small-5.jpg"
+              alt=""
+              class="img-responsive img-small"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Gallery section -->
     <!-- **************************************************************** -->
 
     <!-- Bootstrap scripts -->
