opening hours section markup

--- a/index.html
+++ b/index.html
@@ -595,6 +595,174 @@
     <!-- End of Gallery section -->
     <!-- **************************************************************** -->
 
+    <!-- Opening hours and map section  -->
+    <section id="opening-hours-map">
+      <div class="container my-5">
+        <div class="row">
+          <h2
+            class="
+              secondary-heading
+              text-md-center text-lg-start text-sm-center
+            "
+          >
+            Opening Hours 🕰️
+          </h2>
+        </div>
+        <div class="row">
+          <!-- Left column Opening-->
+          <div
+            class="
+              col-lg-6 col-md-10 col-sm
+              mx-md-auto
+              left-column
+              d-flex
+              flex-column
+              justify-content-md-center
+              mt-5 mt-lg-0
+            "
+          >
+            <!-- 1st row  -->
+            <div class="row">
+              <!-- Days column  -->
+              <div class="col-md-6 col-sm-6 col-6 days center">
+                <img
+                  src="assets/images/opening-hours/time.svg"
+                  alt="svg icon"
+                  class="svg"
+                />
+                <div>Monday – Tuesday</div>
+              </div>
+              <!-- Times column  -->
+              <div class="col-md-5 col-sm-5 col-5 time">
+                <div class="center">
+                  <img
+                    src="assets/images/opening-hours/time.svg"
+                    alt="svg icon clock"
+                    class="svg"
+                  />
+                  <div class="schedule">9:00am – 5:00pm</div>
+                </div>
+              </div>
+            </div>
+            <!-- End of 1st row  -->
+            <!-- 2nd row  -->
+            <div class="row">
+              <!-- Days column  -->
+              <div class="col-md-6 col-sm-6 col-6 days center">
+                <img
+                  src="assets/images/opening-hours/time.svg"
+                  alt="svg icon"
+                  class="svg"
+                />
+
+                <div>Wednesday – Thursday</div>
+              </div>
+              <!-- Times column  -->
+              <div class="col-md-5 col-sm-5 col-5 time">
+                <div class="center">
+                  <img
+                    src="assets/images/opening-hours/time.svg"
+                    alt="svg icon"
+                    class="svg"
+                  />
+
+                  <div class="schedule">9:00am – 5:00pm</div>
+                </div>
+              </div>
+            </div>
+            <!-- End of 2nd row  -->
+            <!-- 3rd row  -->
+            <div class="row">
+              <!-- Days column  -->
+              <div class="col-md-6 col-sm-6 col-6 days center">
+                <img
+                  src="assets/images/opening-hours/time.svg"
+                  alt="svg icon"
+                  class="svg"
+                />
+
+                <div>Friday</div>
+              </div>
+              <!-- Times column  -->
+              <div class="col-md-5 col-sm-5 col-5 time">
+                <div class="center">
+                  <img
+                    src="assets/images/opening-hours/time.svg"
+                    alt="svg icon"
+                    class="svg"
+                  />
+
+                  <div class="schedule">10:00am – 1:00pm</div>
+                </div>
+                <div class="center mt-1">
+                  <img
+                    src="assets/images/opening-hours/time.svg"
+                    alt="svg icon"
+                    class="svg"
+                  />
+
+                  <div class="schedule">02:00am – 4:00pm</div>
+                </div>
+              </div>
+            </div>
+            <!-- End of 3rd row  -->
+            <!-- 4th row  -->
+            <div class="row">
+              <!-- Days column  -->
+              <div class="col-md-6 col-sm-6 col-6 days center">
+                <img
+                  src="assets/images/opening-hours/time.svg"
+                  alt="svg icon"
+                  class="svg"
+                />
+
+                <div>Saturday – Sunday</div>
+              </div>
+              <!-- Times column  -->
+              <div class="col-md-5 col-sm-5 col-5 time">
+                <div class="center">
+                  <img
+                    src="assets/images/opening-hours/close-circle.svg"
+                    alt="svg icon"
+                    class="svg close-icon-svg"
+                  />
+
+                  <div class="schedule text-danger">Closed</div>
+                </div>
+              </div>
+            </div>
+            <!-- End of 4th row  -->
+          </div>
+
+          <!-- Right column Map -->
+          <div
+            class="
+              col-lg-6 col-md-9 col-sm-11
+              mx-sm-auto
+              map
+              d-flex
+              flex-column
+              align-items-end
+              mt-1
+            "
+          >
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2144.5506654037267!2d-4.246953983901844!3d57.48598826446003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488f74019852b92d%3A0xe7ac4513900ac5cc!2s3%20Carsegate%20Rd%20S%2C%20Inverness%20IV3%208LL%2C%20UK!5e0!3m2!1sen!2sbd!4v1629322135639!5m2!1sen!2sbd"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
+            <address class="address align-self-center mt-3">
+              <span>Address: </span>3 Carsegate Rd S, Inverness IV3 8LL, United
+              Kingdom
+            </address>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Opening hours and map section  -->
+    <!-- **************************************************************** -->
+
     <!-- Bootstrap scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
