--- a/index.html
+++ b/index.html
@@ -763,6 +763,173 @@
     <!-- End of Opening hours and map section  -->
     <!-- **************************************************************** -->
 
+    <!-- Footer -->
+    <footer id="footer" class="container-fluid text-center text-lg-start">
+      <div class="container text-center text-md-start">
+        <div class="row">
+          <!-- Grid column  -->
+
+          <div
+            class="
+              col-lg-4 col-md-12
+              d-md-flex d-lg-block
+              justify-content-center justify-content-lg-start
+            "
+          >
+            <!-- logo  -->
+            <div class="d-flex align-items-center logo-box">
+              <div class="logo">
+                <img
+                  src="assets/images/footer/logo.png"
+                  alt="logo"
+                  class="logo"
+                />
+              </div>
+              <div class="company-name ms-4 text-start">
+                <h6 class="secondary-heading">EuroAsia</h6>
+                <span>Scotland</span>
+              </div>
+            </div>
+            <!-- logo  -->
+
+            <div class="my-5">
+              <!-- 1st row  -->
+              <div class="d-flex align-items-center footer-info-box mt-5">
+                <div class="icon-box">
+                  <img src="assets/images/footer/icons/office.svg" alt="icon" />
+                </div>
+                <div class="footer-info">
+                  <span class="d-block">Office</span>
+                  <span class="d-block">8 800 332 65-66</span>
+                </div>
+              </div>
+              <!-- 1st row  -->
+
+              <!-- 2d row  -->
+              <div class="d-flex align-items-center footer-info-box">
+                <div class="icon-box">
+                  <img
+                    src="assets/images/footer/icons/hotline.svg"
+                    alt="icon"
+                  />
+                </div>
+                <div class="footer-info">
+                  <span class="d-block">Hotline</span>
+                  <span class="d-block">8 800 332 65-66</span>
+                </div>
+              </div>
+              <!-- 2d row  -->
+
+              <!-- 3rd row  -->
+              <div class="d-flex align-items-center footer-info-box">
+                <div class="icon-box">
+                  <img
+                    src="assets/images/footer/icons/location.svg"
+                    alt="icon"
+                  />
+                </div>
+                <div class="footer-info">
+                  <span class="d-block">
+                    3 Carsegate Rd S, Inverness IV3 8LL <br />
+                    United Kingdom
+                  </span>
+                  <span></span>
+                </div>
+              </div>
+              <!-- 3rd row  -->
+            </div>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-2 ms-auto col-xl-2 mb-4">
+            <!-- Links -->
+            <h5 class="mb-4 link-item">Quick Link</h5>
+            <p>
+              <a href="#!" class="link-item">FAQ</a>
+            </p>
+            <p>
+              <a href="#!" class="link-item">Promotion</a>
+            </p>
+            <p>
+              <a href="#!" class="link-item">About Us</a>
+            </p>
+            <p>
+              <a href="#!" class="link-item">Categories</a>
+            </p>
+            <p>
+              <a href="#!" class="link-item">News & Events</a>
+            </p>
+            <p>
+              <a href="#!" class="link-item">Blogs</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mb-4">
+            <!-- Links -->
+            <h5 class="mb-4 link-item">Categories</h5>
+            <p>
+              <a href="#!" class="link-item"> Fruites & Vegetables </a>
+            </p>
+            <p>
+              <a href="#!" class="link-item">Breads & Sweets </a>
+            </p>
+            <p>
+              <a href="#!" class="link-item">Frozen Seafoods</a>
+            </p>
+            <p>
+              <a href="#!" class="link-item">Raw Meats</a>
+            </p>
+            <p>
+              <a href="#!" class="link-item">Whines & Alchohol Drinks</a>
+            </p>
+            <p>
+              <a href="#!" class="link-item">Coffees & Teas</a>
+            </p>
+            <p>
+              <a href="#!" class="link-item">Milks & Dairies</a>
+            </p>
+            <p>
+              <a href="#!" class="link-item">Pet Foods</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col col-md-4 col-lg-2 col-xl-2 mb-4 mb-md-0 text-center">
+            <!-- Links -->
+            <h5 class="mb-4 link-item">Follow Us</h5>
+            <!-- Social media  -->
+            <div
+              class="
+                d-flex
+                justify-content-center justify-content-md-start
+                social-media-links
+              "
+            >
+              <a href="" class="me-4 social-media-icon">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="" class="me-4 social-media-icon">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="" class="me-4 social-media-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="" class="me-4 social-media-icon">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
+            <!-- Social media  -->
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- End of Footer -->
+    <!-- **************************************************************** -->
+
     <!-- Bootstrap scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
