--- a/index.html
+++ b/index.html
@@ -50,6 +50,74 @@
   </head>
   <body>
     <!-- **************************************************************** -->
+    <!-- Promotion section -->
+    <section id="promotions">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2 class="secondary-heading mb-5 text-lg-center text-xl-start">
+              Promotions 🎉
+            </h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-xl-8 col-sm col-md-12 col-lg-10 mx-lg-auto">
+            <div class="slider-area">
+              <div class="slider-img">
+                <div>
+                  <img
+                    src="assets/images/promotions/img.jpg"
+                    alt=""
+                    class="img-responsive"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="assets/images/promotions/img2.jpg"
+                    alt=""
+                    class="img-responsive"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="assets/images/promotions/img3.jpg"
+                    alt=""
+                    class="img-responsive"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="assets/images/promotions/img4.jpg"
+                    alt=""
+                    class="img-responsive"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-sm col-md-10 col-lg-8 mx-md-auto">
+            <div class="offer">
+              <h3>
+                <span>20%</span> <br />
+                Sale Off
+              </h3>
+              <p>on selected product</p>
+              <button type="button" class="btn btn-light cta-btn">
+                Shop Now
+              </button>
+              <img
+                src="assets/images/promotions/product.svg"
+                alt=""
+                class="product"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Promotion section -->
+    <!-- **************************************************************** -->
     <!-- Trending Brands Section  -->
     <section id="trending-brands">
       <div class="container">
