--- a/index.html
+++ b/index.html
@@ -187,7 +187,47 @@
         </div>
       </div>
     </header>
-    
+    <!-- Banner -->
+    <section id="banner">
+      <div class="container-fluid banner container-lg">
+        <div class="row">
+          <div class="col col-sm-12 col-lg-6 banner-left">
+            <h1 class="banner-heading">Quality <span>From the east</span></h1>
+            <p>
+              We provides whole range of grocery items in an affordable price
+            </p>
+            <button class="cta">
+              Explore Now
+              <span
+                ><img src="assets/images/hero/right-arrow.svg" alt=""
+              /></span>
+            </button>
+          </div>
+          <div class="col col-sm-12 col-lg-6 banner-right">
+            <img
+              src="assets/images/hero/Vector.png"
+              alt=""
+              class="banner-img vector img-fluid img-banner"
+            />
+            <img
+              src="assets/images/hero/eclipse.png"
+              alt=""
+              class="banner-img eclipse img-fluid img-banner"
+            />
+
+            <img
+              src="assets/images/hero/img.png"
+              alt=""
+              class="banner-img woman img-fluid img-banner"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of banner -->
+    <!-- End of Hero section  -->
+
+   
 
     <!-- Promotions  -->
     <section id="promotions">
