feature section markup

--- a/index.html
+++ b/index.html
@@ -226,7 +226,41 @@
     </section>
     <!-- End of banner -->
     <!-- End of Hero section  -->
+    <!-- Features -->
+    <section id="features">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2 class="secondary-heading text-center">Why Choose Us?</h2>
+          </div>
+        </div>
+        <div class="row d-flex justify-content-center">
+          <div class="col-lg-4 col-sm text-center">
+            <img src="assets/images/features/discount.svg" alt=""  class="feature-icon" />
+            <h3>Daily Offers</h3>
+            <small>Discount Upto 70% Off</small>
+          </div>
+          <div class="col-lg-4 col-sm text-center feature-middle">
+            <img
+              src="assets/images/features/trust.svg"
+              alt="" 
+              class="feature-icon-middle feature-icon"
+            />
+            <div class="feature-middle-text">
+              <h3>Trusted Shop</h3>
+              <small>Serving authentic products</small>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm text-center">
+            <img src="assets/images/features/support.svg" alt="" class="feature-icon" />
+            <h3 class="mt-2 mt-sm-3">24/7 Support</h3>
+            <small>Supporting customer 24 hours</small>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <!-- End of Features -->
    
 
     <!-- Promotions  -->
