--- a/index.html
+++ b/index.html
@@ -261,7 +261,53 @@
     </section>
 
     <!-- End of Features -->
-   
+   <!-- Sponsors  -->
+    <section id="sponsors">
+      <div class="container py-5 py-sm-0">
+        <div class="row">
+          <div
+            class="
+              logo-col
+              col-md-12 col-lg-12
+              my-5
+              text-center
+              d-flex
+              justify-content-center justify-content-xl-between
+              align-items-center
+              flex-wrap
+            "
+          >
+            <img
+              class="sponsors"
+              src="assets/images/sponsors/walmart.png"
+              alt=""
+            />
+
+            <img
+              class="sponsors"
+              src="assets/images/sponsors/pizzahut.png"
+              alt=""
+            />
+
+            <img class="sponsors" src="assets/images/sponsors/irc.png" alt="" />
+
+            <img
+              class="sponsors"
+              src="assets/images/sponsors/oceans.png"
+              alt=""
+            />
+
+            <img
+              id="harvester"
+              class="sponsors"
+              src="assets/images/sponsors/harvester.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Sponsors  -->
 
     <!-- Promotions  -->
     <section id="promotions">
