--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     />
 
     <!-- Custom css  -->
+    <!-- <link rel="stylesheet" href="assets/css/style.min.css" /> -->
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <title>Eurasia</title>
@@ -226,6 +227,7 @@
     </section>
     <!-- End of banner -->
     <!-- End of Hero section  -->
+
     <!-- Features -->
     <section id="features">
       <div class="container">
@@ -236,14 +238,18 @@
         </div>
         <div class="row d-flex justify-content-center">
           <div class="col-lg-4 col-sm text-center">
-            <img src="assets/images/features/discount.svg" alt=""  class="feature-icon" />
+            <img
+              src="assets/images/features/discount.svg"
+              alt=""
+              class="feature-icon"
+            />
             <h3>Daily Offers</h3>
             <small>Discount Upto 70% Off</small>
           </div>
           <div class="col-lg-4 col-sm text-center feature-middle">
             <img
               src="assets/images/features/trust.svg"
-              alt="" 
+              alt=""
               class="feature-icon-middle feature-icon"
             />
             <div class="feature-middle-text">
@@ -252,7 +258,11 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm text-center">
-            <img src="assets/images/features/support.svg" alt="" class="feature-icon" />
+            <img
+              src="assets/images/features/support.svg"
+              alt=""
+              class="feature-icon"
+            />
             <h3 class="mt-2 mt-sm-3">24/7 Support</h3>
             <small>Supporting customer 24 hours</small>
           </div>
@@ -261,7 +271,7 @@
     </section>
 
     <!-- End of Features -->
-   <!-- Sponsors  -->
+    <!-- Sponsors  -->
     <section id="sponsors">
       <div class="container py-5 py-sm-0">
         <div class="row">
@@ -314,7 +324,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h2 class="secondary-heading mb-5 text-lg-center text-xl-start">
+            <h2 class="secondary-heading mb-sm-5 text-lg-center text-xl-start">
               Promotions 🎉
             </h2>
           </div>
@@ -476,7 +486,7 @@
 
         <div class="row">
           <!-- 1st row  -->
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6">
             <a href="#">
               <div class="card h-100">
                 <img
@@ -490,7 +500,7 @@
               </div>
             </a>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6">
             <a href="#">
               <div class="card h-100">
                 <img
@@ -504,7 +514,7 @@
               </div>
             </a>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6">
             <a href="#">
               <div class="card h-100">
                 <img
@@ -518,7 +528,7 @@
               </div>
             </a>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6">
             <a href="#">
               <div class="card h-100">
                 <img
@@ -535,7 +545,7 @@
 
           <!-- End of 1st row  -->
           <!-- 2nd row  -->
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6">
             <a href="#">
               <div class="card h-100">
                 <img
@@ -549,7 +559,7 @@
               </div>
             </a>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6">
             <a href="#">
               <div class="card h-100">
                 <img
@@ -563,7 +573,7 @@
               </div>
             </a>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6">
             <a href="#">
               <div class="card h-100">
                 <img
@@ -577,7 +587,7 @@
               </div>
             </a>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6">
             <a href="#">
               <div class="card h-100">
                 <img
@@ -593,7 +603,12 @@
           </div>
           <!-- End of 2nd row  -->
           <!-- 3rd row  -->
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+          <div
+            class="
+              col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6
+              hidden hidden-col
+            "
+          >
             <a href="#">
               <div class="card h-100">
                 <img
@@ -607,7 +622,12 @@
               </div>
             </a>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+          <div
+            class="
+              col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6
+              hidden hidden-col
+            "
+          >
             <a href="#">
               <div class="card h-100">
                 <img
@@ -621,7 +641,12 @@
               </div>
             </a>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+          <div
+            class="
+              col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6
+              hidden hidden-col
+            "
+          >
             <a href="#">
               <div class="card h-100">
                 <img
@@ -635,7 +660,12 @@
               </div>
             </a>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+          <div
+            class="
+              col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6
+              hidden hidden-col
+            "
+          >
             <a href="#">
               <div class="card h-100">
                 <img
@@ -653,7 +683,12 @@
           </div>
           <!-- End of 3rd row  -->
           <!-- 4th row  -->
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+          <div
+            class="
+              col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6
+              hidden hidden-col
+            "
+          >
             <a href="#">
               <div class="card h-100">
                 <img
@@ -667,7 +702,12 @@
               </div>
             </a>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+          <div
+            class="
+              col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6
+              hidden hidden-col
+            "
+          >
             <a href="#">
               <div class="card h-100">
                 <img
@@ -681,7 +721,12 @@
               </div>
             </a>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+          <div
+            class="
+              col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6
+              hidden hidden-col
+            "
+          >
             <a href="#">
               <div class="card h-100">
                 <img
@@ -697,7 +742,12 @@
               </div>
             </a>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 hidden hidden-col">
+          <div
+            class="
+              col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6
+              hidden hidden-col
+            "
+          >
             <a href="#">
               <div class="card h-100">
                 <img
